# patchif

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  modules.rst  moviad.datasets.miic.rst  moviad.datasets.mvtec.rst  moviad.datasets.realiad.rst  moviad.datasets.rst  moviad.datasets.visa.rst  moviad.entrypoints.rst  moviad.models.cfa.rst  moviad.models.rd4ad.rst  moviad.models.rst  moviad.profiler.rst  moviad.rst  moviad.trainers.rst
docs/_autosummary/: moviad.datasets.builder.rst  moviad.datasets.iad_dataset.rst  moviad.datasets.miic.miic_dataset.rst  moviad.datasets.miic.rst  moviad.datasets.mvtec.mvtec_dataset.rst  moviad.datasets.mvtec.rst  moviad.datasets.realiad.realiad_data.rst  moviad.datasets.realiad.realiad_dataset.rst  moviad.datasets.realiad.realiad_dataset_configurations.rst  moviad.datasets.realiad.rst  moviad.datasets.rst  moviad.datasets.visa.rst  moviad.datasets.visa.visa_data.rst  moviad.datasets.visa.visa_dataset.rst  moviad.datasets.visa.visa_dataset_configurations.rst  moviad.entrypoints.args.rst  moviad.entrypoints.cfa.rst  moviad.entrypoints.common.rst  moviad.entrypoints.patchcore.rst  moviad.entrypoints.rd4ad.rst  moviad.entrypoints.rst  moviad.models.cfa.cfa.rst  moviad.models.cfa.rst  moviad.models.rd4ad.rd4ad.rst  moviad.models.rd4ad.rst  moviad.models.rst  moviad.profiler.rst  (+12 more)
main_scripts/: get_metrics_df.py  launch_memory_bank.sh  launch_padim.sh  launch_patchif.sh  main_cfa.py  main_padim.py  main_patchcore.py  main_patchif.py  main_stfpm.py  memory_bank.py
(+30 files in other folders)
